TRYING to fix BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-html {
+/*html {
   background-color: rgb(57, 57, 57);
   overflow: visible;
-}
+}*/
 
 body {
   background-color: rgb(240,240,240);
